# openstack_swift_api

./: .gitignore  README.adoc  alembic.ini  metadata.py  object_store.py  pyproject.toml  server.py
lib/: constants.py  metadata.py  object_store.py
sql/: env.py
sql/versions/: 489b83637b5f_new_database.py
ui/: index.html  nuxt.config.js  package.json
ui/components/: ObjectDetails.vue  ObjectTable.vue  TagManager.vue
ui/layouts/: default.vue
ui/modules/: common.ts
ui/pages/: index.vue
ui/store/: index.js
